@@ -4,6 +4,10 @@
 
 - fixed schema error handling with error code `{Number}` as the `err` argument in the `$.callback(err_code response)` method
 - improved error handling in `WEBSOCKETCLIENT()` method
+- updated `$` arg by adding `websocket {Boolean}` property in `AUTH($)` delegate
+- added support for WebSocket API
+- extended `ROUTE('API @websocket_api_name opid *Schema --> operation')` method by adding `@websocketapi_endpoint_name`
+- added `websocket.api(url)` automatically processes `ROUTE()` with WebSocket APIs
 
 ========================
 0.0.43
